fixed white space and logo load

--- a/css/layout.css
+++ b/css/layout.css
@@ -99,3 +99,11 @@ img {
 .core {
 	height: 165px;
 }
+
+#logo_container {
+	margin-top: 80px;
+}
+
+.container {
+	height: 100%;
+}
