--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ h3 {
 }
 
 /*Background Color*/
-.container {
+.container, #body_row {
 	background-color: white;
 }
 
